# godot-rust

gdnative/: Cargo.toml
gdnative-core/: Cargo.toml
gdnative-core/src/core_types/: dictionary.rs  error.rs  node_path.rs  quat.rs  rect2.rs  rid.rs  string.rs  transform2d.rs  typed_array.rs  variant.rs  variant_array.rs  vector3.rs
gdnative-core/src/core_types/geom/: basis.rs
gdnative-core/src/core_types/variant/: serde.rs
gdnative-sys/: build.rs
test/: Cargo.toml
test/src/: test_serde.rs
