[package]
name = "gdnative-test"
version = "0.1.0"
workspace = ".."
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = []
type_tag_fallback = ["gdnative/type_tag_fallback"]

[dependencies]
gdnative = { path = "../gdnative", features = ["gd_test"] }
gdnative-derive = { path = "../gdnative-derive" }
approx = "0.5.0"
ron = "0.6.4"
serde = "1"
serde_json = "1.0.64"
bincode = "1.3.3"